crates/strider/tests/snapshots/v2__x64__complex__call_uses_call_return.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4012a0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x4012b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "6" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v12" [color="#888888", style=dashed];
  "v12" -> "11" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v13" [color="#888888", style=dashed];
  "v13" -> "11" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x401640:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "22" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x401639:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
